Run headless mocha tests through Grunt

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -35,6 +35,9 @@
     <!-- bower:js -->
     <!-- endbower -->
     <!-- endbuild -->
+    <!-- build:js(.tmp) scripts/app.js -->
+    <script src="scripts/app.js"></script>
+    <!-- endbuild -->
     <% if (!options['skip-analytics']) { %>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
