Inject script tags into index file

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -37,6 +37,7 @@
     <!-- endbuild -->
     <!-- build:js scripts/app.js -->
     <script src="scripts/app.js"></script>
+    <!-- generator:ractive script -->
     <!-- endbuild -->
     <% if (!options['skip-analytics']) { %>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
