Add styles to welcome page

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -26,9 +26,37 @@
       improve your experience.</p>
     <![endif]-->
 
-    <div>
-      <h1>Hello, and welcome to Ractive.js</h1>
-      <h3>Brought to you by <code>generator-ractive</code></h3>
+    <div class="welcome">
+      <h1>Hello, and Welcome to Ractive.js</h1>
+      <h3>The Diamond Age of Web Development</h3>
+      <div class="diamond-container">
+        <svg width="100px" viewBox="0 0 66 46">
+          <g class="diamond">
+            <circle cx="23" cy="3" r="3" />
+            <circle cx="43" cy="33" r="3" />
+            <circle cx="23" cy="33" r="3" />
+            <circle cx="23" cy="23" r="3" />
+            <circle cx="33" cy="3"  r="3" />
+            <circle cx="33" cy="43" r="3" />
+            <circle cx="33" cy="33" r="3" />
+            <circle cx="33" cy="23" r="3" />
+            <circle cx="43" cy="23" r="3" />
+            <circle cx="43" cy="3"  r="3" />
+            <circle cx="13" cy="23" r="3" />
+            <circle cx="13" cy="3"  r="3" />
+            <circle cx="53" cy="23" r="3" />
+            <circle cx="53" cy="3"  r="3" />
+            <circle cx="13" cy="13" r="3" />
+            <circle cx="23" cy="13" r="3" />
+            <circle cx="33" cy="13" r="3" />
+            <circle cx="3"  cy="13" r="3" />
+            <circle cx="43" cy="13" r="3" />
+            <circle cx="53" cy="13" r="3" />
+            <circle cx="63" cy="13" r="3" />
+          </g>
+        </svg>
+      </div>
+      <p class="credit">Brought to you by <span>generator-ractive</span></p>
     </div>
     <% if (loadMethod === 'scriptTags') { %>
     <!-- build:js(.) scripts/vendor.js -->
