--- a/app/templates/test/spec_runner.html
+++ b/app/templates/test/spec_runner.html
@@ -18,6 +18,7 @@
 
   <!-- include spec files here... -->
   <script src="app_test.js"></script><% } else if (loadMethod === 'AMD') { %>
-  <script data-main="spec_main" src="bower_components/requirejs/require.js"></script><% } %>
+  <script data-main="spec_main" src="bower_components/requirejs/require.js"></script><% } else if (loadMethod === 'browserify') { %>
+  <script src="scripts/tests.js"></script> <% } %>
 </body>
 </html>
